--- a/biblio/othercites.bib
+++ b/biblio/othercites.bib
@@ -181,6 +181,16 @@
 
 % ГОСТ Р 7.0.11-2011, Приложение Б, Статьи
 
+@ARTICLE{Requicha80,
+  author = {A. G. Requicha},
+  title = {Representations for Rigid Solids: Theory, Methods, and Systems },
+  journal = {Computing Surveys},
+  year = {1980},
+  volume = {12},
+  number = {4},
+  language = {english}
+}
+
 @ARTICLE{Berestova,
   author = {Берестова, Т. Ф.},
   title = {Поисковые инструмены библиотеки},
