--- a/common/data.tex
+++ b/common/data.tex
@@ -2,9 +2,9 @@
 \newcommand{\thesisAuthor}             % Диссертация, ФИО автора
 {%
     \texorpdfstring{% \texorpdfstring takes two arguments and uses the first for (La)TeX and the second for pdf
-        \todo{Фамилия Имя Отчество автора}% так будет отображаться на титульном листе или в тексте, где будет использоваться переменная
+        Ульянов Данила Ярославович % так будет отображаться на титульном листе или в тексте, где будет использоваться переменная
     }{%
-        Фамилия, Имя Отчество% эта запись для свойств pdf-файла. В таком виде, если pdf будет обработан программами для сбора библиографических сведений, будет правильно представлена фамилия.
+        Ульянов, Данила Ярославович% эта запись для свойств pdf-файла. В таком виде, если pdf будет обработан программами для сбора библиографических сведений, будет правильно представлена фамилия.
     }%
 }
 \newcommand{\thesisAuthorShort}        % Диссертация, ФИО автора инициалами
@@ -23,23 +23,23 @@
 \newcommand{\thesisDegreeShort}        % Диссертация, ученая степень, краткая запись
 {\todo{канд. физ.-мат. наук}}
 \newcommand{\thesisCity}               % Диссертация, город написания диссертации
-{\todo{Город}}
+{Нижний Новгород}
 \newcommand{\thesisYear}               % Диссертация, год написания диссертации
 {\todo{20XX}}
 \newcommand{\thesisOrganization}       % Диссертация, организация
-{\todo{Название учреждения, в~котором выполнялась данная диссертационная работа}}
+{Нижегородский государственный университет им. Н.И.~Лобачевского}
 \newcommand{\thesisOrganizationShort}  % Диссертация, краткое название организации для доклада
-{\todo{НазУчДисРаб}}
+{ННГУ}
 
 \newcommand{\thesisInOrganization}     % Диссертация, организация в предложном падеже: Работа выполнена в ...
 {\todo{учреждении, в~котором выполнялась данная диссертационная работа}}
 
 \newcommand{\supervisorFio}            % Научный руководитель, ФИО
-{\todo{Фамилия Имя Отчество}}
+{Турлапов Вадим Евгеньевич}
 \newcommand{\supervisorRegalia}        % Научный руководитель, регалии
 {\todo{уч. степень, уч. звание}}
 \newcommand{\supervisorFioShort}       % Научный руководитель, ФИО
-{\todo{И.О.~Фамилия}}
+{В.Е.~Турлапов}
 \newcommand{\supervisorRegaliaShort}   % Научный руководитель, регалии
 {\todo{уч.~ст.,~уч.~зв.}}
 
