--- a/Dissertation/part1.tex
+++ b/Dissertation/part1.tex
@@ -4,16 +4,16 @@
 
 \section{Представления твердотельной геометрии} \label{sect1_1}
 
-Твердое тело – область трехмерного пространства, состоящая из однородного материала и ограниченная замкнутой поверхностью.
-Грань – гладкая (не обязательно плоская) часть поверхности детали, ограниченная замкнутым контуром из ребер. Частный случай – шарообразные твердые тела и тела вращения с гладким профилем, состоящие из единой грани, которая, соответственно, не имеет ребер.
+Твёрдое тело – область трёхмерного пространства, состоящая из однородного материала и ограниченная замкнутой поверхностью.
+Грань – гладкая (не обязательно плоская) часть поверхности детали, ограниченная замкнутым контуром из рёбер. Частный случай – шарообразные твёрдые тела и тела вращения с гладким профилем, состоящие из единой грани, которая, соответственно, не имеет рёбер.
 
 Ребро – пространственная кривая произвольной конфигурации, полученная на пересечении двух граней.
 
-Вершина – точка в трехмерном пространстве. Для твердого тела это может быть одна из точек на конце ребра.
+Вершина – точка в трёхмерном пространстве. Для твёрдого тела это может быть одна из точек на конце ребра.
 
-Твердотельное моделирование
+\section{Твердотельное моделирование} \label{solid_modeling}
 
-Трехмерная твердотельная геометрия играет важную роль во многих научных и инженерных областях. И она совершенно необходима для областей связанных с производством.
+Трёхмерная твердотельная геометрия играет важную роль во многих научных и инженерных областях. Также она совершенно необходима для областей связанных с производством.
 
 Для геометрического моделирования предметов, занимающих конечный объем, в математике используются объекты, называемые твердыми телами (rigid body). При моделировании тел строятся поверхности, отделяющие занимаемую ими часть пространства от остальной части пространства. На практике используется несколько представлений геометрии "--- подходов к описанию твердых тел.
 
@@ -37,11 +37,11 @@
 
 Отличительной характеристикой чистого подхода инстанцирования примитивов, является отсутствие средств комбинирования примитивов для создания новых, более сложных объектов.
 
-Такая схема представления твердотельной геометрии удобна и проста в использовании, но только до тех пор когда набор обобщенных примитивов и их параметров достаточно мал. Другим недостатком представления является сложность построения алгоритмов для вычисления свойств представляемых тел. Каждое семейство примитивов приходится обрабатывать как специальный случай, что не позволяет единообразно обрабатывать геометрию.
+Такая схема представления твердотельной геометрии удобна и проста в использовании, но только до тех пор пока набор обобщённых примитивов и их параметров достаточно мал. Другим недостатком представления является сложность построения алгоритмов для вычисления свойств представляемых тел. Каждое семейство примитивов приходится обрабатывать как специальный случай, что не позволяет единообразно обрабатывать геометрию.
 
 \section{\todo{Перечисление заполнения пространства}} \label{sect_spatial_occupancy_enum}
 
-Представление тела в виде \textit{перечисления заполнения пространства} (Spatial Occupancy Enumeration), более известное, в настоящее время \todo{citation needed}, как воксельное представление, представляет из себя список пространственных ячеек, занимаемых телом. Эти ячейки, также называемые вокселями, являются параллелепипедами фиксированного размера и лежат в фиксированной пространственной сетке. В такой системе, каждая ячейка может быть представлена координатами единственной точки, например центроидом ячейки. Обычно подразумевается также определённый порядок обхода сетки. Соответствующие упорядоченные наборы ячеек называют \textit{пространственными массивами} (\textit{spatial arrays}).
+Представление тела в виде \textit{перечисления заполнения пространства} (Spatial Occupancy Enumeration), более известное, в настоящее время \todo{citation needed}, как \textit{воксельное} представление, представляет из себя список пространственных ячеек, занимаемых телом. Эти ячейки, также называемые вокселями, являются параллелепипедами фиксированного размера и лежат в фиксированной пространственной сетке. В такой системе, каждая ячейка может быть представлена координатами единственной точки, например центроидом ячейки. Обычно подразумевается также определённый порядок обхода сетки. Соответствующие упорядоченные наборы ячеек называют \textit{пространственными массивами} (\textit{spatial arrays}).
 
 Пространственные массивы, как правило, слишком подробны (избыточны) в качестве основного представления для моделирования однородных твердых тел, при достижении требуемой точности аппроксимации. Однако алгоритмы и структуры данных могут быть существенно проще.
 
@@ -60,7 +60,9 @@
 
 В работе \cite{A combined octree/Delaunay method for fully automatic 3-d mesh generation} 1990 был предложен полностью автоматический метод построения сплошной триангуляции для твердого тела с использованием окто-дерева и Делоне триангуляции.
 
-В работе \cite{Modeling with Simplicial Complexes} 1996 топологическая концепция симплициального комплекса ставится в соответствие триангуляции для твердотельного моделирования.
+В работе \cite{Modeling with Simplicial Complexes} 1996 топологическая концепция симплициального комплекса ставится в соответствие триангуляции для твердотельного моделирования. 
+
+\todo{TetWild}
 
 \todo{тела заметания! но поверхность движения?}
 
@@ -76,7 +78,7 @@
 
 \section{Конструктивная блочная геометрия} \label{sect_csg}
 
-Конструктивная блочная геометрия (Constructive Solid Geometry или CSG) представляет собой семейство схем для представления твердых тел в виде булевых комбинаций примитивов с помощью регуляризованных операций булевой логики на множествах. CSG представления имеют форму упорядоченных двоичных деревьев, где нетерминальные (внутренние) узлы представляют собой либо твердотельные преобразования (перенос и поворот), либо регуляризованные операции на множествах. Терминальные (листовые) узлы являются примитивами, представляющими замкнутые регулярные множества. Таким образом каждое поддерево представляет собой множество, полученный в результате применения указанных операций на множестве, представленном листовыми примитивами поддерева. Привлекательные свойства CSG включают в себя компактность, гарантированную корректность твердых тел (при использовании корректных твердых тел в качестве примитивов), и естественный контроль формы твердого тела в терминах параметров высокого уровня, определяющих примитивы твердого тела, их положения и ориентации. Относительно простая структура данных и изящные рекурсивные алгоритмы еще больше способствовали популярности CSG.
+Конструктивная блочная геометрия (Constructive Solid Geometry или CSG) представляет собой семейство схем для представления твердых тел в виде булевых комбинаций примитивов с помощью регуляризованных операций булевой логики на множествах. CSG представления имеют форму упорядоченных двоичных деревьев, где нетерминальные (внутренние) узлы представляют собой либо твердотельные преобразования (перенос и поворот), либо регуляризованные операции на множествах. Терминальные (листовые) узлы являются примитивами, представляющими замкнутые регулярные множества. Таким образом каждое поддерево представляет собой множество, полученный в результате применения указанных операций на множестве, представленном листовыми примитивами поддерева. Привлекательные свойства CSG включают в себя компактность, гарантированную корректность твердых тел (при использовании корректных твердых тел в качестве примитивов), и естественный контроль формы твердого тела в терминах параметров высокого уровня, определяющих примитивы твердого тела, их положения и ориентации. Относительно простая структура данных и изящные рекурсивные алгоритмы еще больше способствовали популярности CSG на заре развития САПР систем и геометрического моделирования. Позже, проблемы CSG подхода как основного представления твердых тел всё же перевесили его преимущества, среди них: сложность прямой визуализации CSG объектов (без перехода к граничному представлению), сложность перехода к граничному представлению, сложность задания незамкнутых объектов (это возможно если использовать незамкнутые примитивы, но тогда необходимо отказаться от одного из главных преимуществ — гарантированной корректности) и т. д. Сейчас CSG представление используется в основном, как вспомогательное или промежуточное представление, для выполнения булевых операций над телами.
 
 В работе \cite{Requicha 77} года были заложены четкие теоретические основы подхода. Потом в статье 80 года понятие твердотельного моделирования связано с булевой логикой на р-сетах. Дальнейшее развитие в статье 85 года. Язык падл-1 и падл-2, в каких системах использовали CSG?
 
@@ -115,6 +117,10 @@ bsp-дерево
 volume rendering?
 
 \section{Подходы к визуализации CSG} \label{sect_csg_vis}
+
+\todo{хронологически}
+
+Алгоритмы бросания лучей [Roth, Goldstein and Malin] применяют один и тот же алгоритм 
 
 \todo{Визуализация CSG на ЦПУ? ранние подходы}
 
