--- a/Dissertation/part1.tex
+++ b/Dissertation/part1.tex
@@ -120,6 +120,12 @@ volume rendering?
 
 \todo{хронологически}
 
+Самым ранним способом визуализации CSG моделей была отрисовка линиями (wireframe). Для этого необходимо построить линии пересечения всех поверхностей в модели и спроектировать их на экранную плоскость. Позже, этот метод начали дополнять удалением невидимых линий. [e.g. Appel67], [An algorithm for eliminating the hidden lines in computer-drawn polyhedra 68]
+
+Идея применения трассировки лучей (ray casting) для визуализации CSG моделей, по видимому, принадлежала [Goldstein and Nagel]. В этой работе трассировка лучей применяется для получения \todo{shaded} изображений твердотельных моделей. Чтобы получить такое изображение Goldstein and Nagel моделировали процесс, обратный фотографии. Для каждого пикселя изображения, они строят лучи и определяют его пересечение с виртуальной сценой. Ближайшее к наблюдателю пересечение луча с поверхностью, определяет видимую поверхность. Вычислив нормаль к поверхности в точке пересечения и зная положение источника света, можно рассчитать яркость каждого пикселя. Кратко формулируется идея алгоритма пересечения луча и CSG модели. Каждая точка пересечения луча и геометрии (в порядке от ближних к дальним) анализируется на принадлежность логическому выражению, соответствующему части модели -- региону. На основе этого метода была разработана коммерческая CAD/CAM система SynthaVision, которая позволяла получать \todo{wireframe} и \todo{shaded} изображения твердотельных моделей.
+
+Многие эксперты в CAD/CAM области того времени считали трассировку лучей непрактичным методом "грубой силы" [Roth]. [Roth] в своей работе приводит практическое описание алгоритма трассировки лучей для задачи визуализации CSG моделей, а также приводит оптимизации алгоритма. [Roth] использует ограничивающие объемы (enclosures, camera space AABB?) для ускоренного отбрасывания CSG поддеревьев гарантированно непересекающихся с лучом. [Roth] делает вывод о важности пространственной когерентности примитивов в дереве и предполагает, что CSG дерево может быть автоматически пере-упорядочено, для улучшения пространственной когерентности. Дальнейшие оптимизации были предложены в работе [Bronsvoort84].
+
 Алгоритмы бросания лучей [Roth, Goldstein and Malin] применяют один и тот же алгоритм 
 
 \todo{Визуализация CSG на ЦПУ? ранние подходы}
